--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,10 @@
 .fondo{
     background-image: url('../src/assets/fondo_index.png');
 }
+
+html, body, #root{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
